new screens, some backend development (testing and a few controllers)